# n-queens-cuda

./: CMakeLists.txt  README.md  n-queens.cc  n-queens.cu
